feat: Backport parameter manager changes to 3.x
Backports the following PRs to 3.x: #3699, #3684, #4127